cmake_minimum_required(VERSION 3.12)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode main.cpp)
add_executable(1 1.cpp)
add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(15 15.cpp)

